# web-search-mcp

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  server.py
.claude/: settings.local.json
tests/: test_search.py
web_search_mcp/: main.py  server.py
