[project]
name = "web_search_mcp"
version = "0.1.0"
description = "FastMCP-based server that provides comprehensive web search functionality for LLM clients through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.10.0",
    "fastmcp>=0.3.0",
]

[project.scripts]
web-search-mcp = "web_search_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_search_mcp*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
